Document PPDG/src/objects/I_T_Templates__c.object
<CustomObject>
    <fields>
        <fullName>Aqua_Global__c</fullName>
        <label>Aqua Global</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BACS__c</fullName>
        <label>BACS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <label>Call Recording</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datastore__c</fullName>
        <label>Datastore</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA_Template__c</fullName>
        <label>EBA Template</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA__c</fullName>
        <label>EBA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBS_Template__c</fullName>
        <label>EBS Template</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS__c</fullName>
        <label>EBS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIS__c</fullName>
        <label>FIS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFM_Admin__c</fullName>
        <label>IFM Admin</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NT__c</fullName>
        <label>NT</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NVM_ContactWorld__c</fullName>
        <label>NVM ContactWorld</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Profile__c</fullName>
        <label>Salesforce Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Account Reconciliations (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Services Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Services Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Team Leader (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch HPP Sellers (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre Team Leader (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Delivery Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Delivery Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCU Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCU Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Staff (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Operations (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Sales and Service (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Sales Support Team (POST PROFILE REVIEW)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Role__c</fullName>
        <label>Salesforce Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Services Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Services Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Services Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA (Name of Branch)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA under DBM Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager (Branch Name)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Delivery Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Assistant/ Resi Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial BDM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce__c</fullName>
        <label>Salesforce</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPN__c</fullName>
        <label>VPN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webform__c</fullName>
        <label>Webform</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IT Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Salesforce_Profile__c</columns>
        <columns>Salesforce_Role__c</columns>
        <columns>EBS_Template__c</columns>
        <columns>EBA_Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>I.T Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_world_and_call_recording</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( NVM_ContactWorld__c ,&quot;Yes&quot;)  
&amp;&amp;
NOT(ISPICKVAL( Call_Recording__c ,&quot;No&quot;))</errorConditionFormula>
        <errorDisplayField>Call_Recording__c</errorDisplayField>
        <errorMessage>If NVM contact world access has been given to this template, call recording is not  required. Please select no.</errorMessage>
    </validationRules>
</CustomObject>